Ender IO recipes updated.

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -70,42 +70,50 @@ bibliocraft {
     B:BiblioBorderlessPainting.3=false
     B:BiblioBorderlessPainting.4=false
     B:BiblioBorderlessPainting.5=false
+    B:BiblioBorderlessPainting.6=false
     B:BiblioCase=false
     B:BiblioCase.1=false
     B:BiblioCase.2=false
     B:BiblioCase.3=false
     B:BiblioCase.4=false
     B:BiblioCase.5=false
+    B:BiblioCase.6=false
+    B:BiblioClipboard=false
     B:BiblioClock=false
     B:BiblioClock.1=false
     B:BiblioClock.2=false
     B:BiblioClock.3=false
     B:BiblioClock.4=false
     B:BiblioClock.5=false
+    B:BiblioClock.6=false
     B:BiblioDesk=false
     B:BiblioDesk.1=false
     B:BiblioDesk.2=false
     B:BiblioDesk.3=false
     B:BiblioDesk.4=false
     B:BiblioDesk.5=false
+    B:BiblioDesk.6=false
     B:BiblioFancyPainting=false
     B:BiblioFancyPainting.1=false
     B:BiblioFancyPainting.2=false
     B:BiblioFancyPainting.3=false
     B:BiblioFancyPainting.4=false
     B:BiblioFancyPainting.5=false
+    B:BiblioFancyPainting.6=false
     B:BiblioFancySign=false
     B:BiblioFancySign.1=false
     B:BiblioFancySign.2=false
     B:BiblioFancySign.3=false
     B:BiblioFancySign.4=false
     B:BiblioFancySign.5=false
+    B:BiblioFancySign.6=false
     B:BiblioFlatPainting=false
     B:BiblioFlatPainting.1=false
     B:BiblioFlatPainting.2=false
     B:BiblioFlatPainting.3=false
     B:BiblioFlatPainting.4=false
     B:BiblioFlatPainting.5=false
+    B:BiblioFlatPainting.6=false
     B:BiblioIronLamp=false
     B:BiblioIronLamp.1=false
     B:BiblioIronLamp.10=false
@@ -144,6 +152,7 @@ bibliocraft {
     B:BiblioLabel.3=false
     B:BiblioLabel.4=false
     B:BiblioLabel.5=false
+    B:BiblioLabel.6=false
     B:BiblioLamp=false
     B:BiblioLamp.1=false
     B:BiblioLamp.10=false
@@ -182,43 +191,57 @@ bibliocraft {
     B:BiblioMapFrames.3=false
     B:BiblioMapFrames.4=false
     B:BiblioMapFrames.5=false
+    B:BiblioMapFrames.6=false
     B:BiblioMiddlePainting=false
     B:BiblioMiddlePainting.1=false
     B:BiblioMiddlePainting.2=false
     B:BiblioMiddlePainting.3=false
     B:BiblioMiddlePainting.4=false
     B:BiblioMiddlePainting.5=false
+    B:BiblioMiddlePainting.6=false
     B:BiblioPaintPress=false
+    B:BiblioPaneler=false
+    B:BiblioPaneler.1=false
+    B:BiblioPaneler.2=false
+    B:BiblioPaneler.3=false
+    B:BiblioPaneler.4=false
+    B:BiblioPaneler.5=false
+    B:BiblioPaneler.6=false
     B:BiblioPotionShelf=false
     B:BiblioPotionShelf.1=false
     B:BiblioPotionShelf.2=false
     B:BiblioPotionShelf.3=false
     B:BiblioPotionShelf.4=false
     B:BiblioPotionShelf.5=false
+    B:BiblioPotionShelf.6=false
     B:BiblioRack=false
     B:BiblioRack.1=false
     B:BiblioRack.2=false
     B:BiblioRack.3=false
     B:BiblioRack.4=false
     B:BiblioRack.5=false
+    B:BiblioRack.6=false
     B:BiblioSeats=false
     B:BiblioSeats.1=false
     B:BiblioSeats.2=false
     B:BiblioSeats.3=false
     B:BiblioSeats.4=false
     B:BiblioSeats.5=false
+    B:BiblioSeats.6=false
     B:BiblioShelf=false
     B:BiblioShelf.1=false
     B:BiblioShelf.2=false
     B:BiblioShelf.3=false
     B:BiblioShelf.4=false
     B:BiblioShelf.5=false
+    B:BiblioShelf.6=false
     B:BiblioSimplePainting=false
     B:BiblioSimplePainting.1=false
     B:BiblioSimplePainting.2=false
     B:BiblioSimplePainting.3=false
     B:BiblioSimplePainting.4=false
     B:BiblioSimplePainting.5=false
+    B:BiblioSimplePainting.6=false
     B:BiblioStuffs=false
     B:BiblioStuffs.2=false
     B:BiblioStuffs.3=false
@@ -244,6 +267,7 @@ bibliocraft {
     B:BiblioTable.3=false
     B:BiblioTable.4=false
     B:BiblioTable.5=false
+    B:BiblioTable.6=false
     B:BiblioTypewriter=false
     B:BiblioTypewriter.1=false
     B:BiblioTypewriter.10=false
@@ -266,18 +290,21 @@ bibliocraft {
     B:BiblioWorkbench.3=false
     B:BiblioWorkbench.4=false
     B:BiblioWorkbench.5=false
+    B:BiblioWorkbench.6=false
     B:Bibliotheca=false
     B:Bibliotheca.1=false
     B:Bibliotheca.2=false
     B:Bibliotheca.3=false
     B:Bibliotheca.4=false
     B:Bibliotheca.5=false
+    B:Bibliotheca.6=false
     B:BookcaseFilled=false
     B:BookcaseFilled.1=false
     B:BookcaseFilled.2=false
     B:BookcaseFilled.3=false
     B:BookcaseFilled.4=false
     B:BookcaseFilled.5=false
+    B:BookcaseFilled.6=false
     B:PrintingPress=false
     B:TypesettingMachine=false
 }
@@ -4735,6 +4762,8 @@ galacticraftmars {
     B:tilemarsMachineT2=false
     B:tilemarsMachineT2.4=false
     B:tilemarsMachineT2.8=false
+    B:tileminerBase=false
+    B:tileminerBaseFull=false
     B:tileslimelingEgg=false
     B:tileslimelingEgg.1=false
     B:tileslimelingEgg.2=false
