--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -94,7 +94,7 @@ settings {
     I:BloodMoonSpawnSpeed=3
 
     # Whether players in the overworld should receive a message at the beginning of the bloodmoon
-    B:BloodmoonMessage=false
+    B:BloodmoonMessage=true
 
     # Whether the Bloodmoon should respect the doMobSpawning gamerule
     B:BloodmoonRespectGamerule=true
