--- a/config/bigtrees/individualbiomes.cfg
+++ b/config/bigtrees/individualbiomes.cfg
@@ -8380,6 +8380,161 @@
     S:"thaumcraft.Tainted Land Tall Oak Autumn"=
     S:"thaumcraft.Tainted Land Tall Oak Brown"=
     S:"thaumcraft.Tainted Land Yellow Big Birch"=
+    S:"ttftcuts.Gravel Beach Big Birch 0"=
+    S:"ttftcuts.Gravel Beach Big Birch 1"=
+    S:"ttftcuts.Gravel Beach Big Pine 0"=
+    S:"ttftcuts.Gravel Beach Big Pine 1"=
+    S:"ttftcuts.Gravel Beach Block Maple"=
+    S:"ttftcuts.Gravel Beach Block Oak 0"=
+    S:"ttftcuts.Gravel Beach Block Oak Autumn"=
+    S:"ttftcuts.Gravel Beach Block Oak Brown"=
+    S:"ttftcuts.Gravel Beach Block Oak Dark"=
+    S:"ttftcuts.Gravel Beach Cyprus Oak 0"=
+    S:"ttftcuts.Gravel Beach Cyprus Willow"=
+    S:"ttftcuts.Gravel Beach Dark Hat"=
+    S:"ttftcuts.Gravel Beach Dead Tree 0"=
+    S:"ttftcuts.Gravel Beach Great Oak 0"=
+    S:"ttftcuts.Gravel Beach Great Oak Autumn"=
+    S:"ttftcuts.Gravel Beach Great Oak Brown"=
+    S:"ttftcuts.Gravel Beach Great Oak Dark"=
+    S:"ttftcuts.Gravel Beach Hat Sacred Tree"=
+    S:"ttftcuts.Gravel Beach Hat Tree 0"=
+    S:"ttftcuts.Gravel Beach Pertrified Dead Tree"=
+    S:"ttftcuts.Gravel Beach Swamp Oak 0"=
+    S:"ttftcuts.Gravel Beach Tall Cherry"=
+    S:"ttftcuts.Gravel Beach Tall Dark Oak"=
+    S:"ttftcuts.Gravel Beach Tall Fir"=
+    S:"ttftcuts.Gravel Beach Tall Jacaranda"=
+    S:"ttftcuts.Gravel Beach Tall Magic Tree"=
+    S:"ttftcuts.Gravel Beach Tall Maple"=
+    S:"ttftcuts.Gravel Beach Tall Oak 0"=
+    S:"ttftcuts.Gravel Beach Tall Oak Autumn"=
+    S:"ttftcuts.Gravel Beach Tall Oak Brown"=
+    S:"ttftcuts.Gravel Beach Yellow Big Birch"=
+    S:"ttftcuts.Rocky Steppe Big Birch 0"=
+    S:"ttftcuts.Rocky Steppe Big Birch 1"=
+    S:"ttftcuts.Rocky Steppe Big Pine 0"=
+    S:"ttftcuts.Rocky Steppe Big Pine 1"=
+    S:"ttftcuts.Rocky Steppe Block Maple"=
+    S:"ttftcuts.Rocky Steppe Block Oak 0"=
+    S:"ttftcuts.Rocky Steppe Block Oak Autumn"=
+    S:"ttftcuts.Rocky Steppe Block Oak Brown"=
+    S:"ttftcuts.Rocky Steppe Block Oak Dark"=
+    S:"ttftcuts.Rocky Steppe Cyprus Oak 0"=
+    S:"ttftcuts.Rocky Steppe Cyprus Willow"=
+    S:"ttftcuts.Rocky Steppe Dark Hat"=
+    S:"ttftcuts.Rocky Steppe Dead Tree 0"=
+    S:"ttftcuts.Rocky Steppe Great Oak 0"=
+    S:"ttftcuts.Rocky Steppe Great Oak Autumn"=
+    S:"ttftcuts.Rocky Steppe Great Oak Brown"=
+    S:"ttftcuts.Rocky Steppe Great Oak Dark"=
+    S:"ttftcuts.Rocky Steppe Hat Sacred Tree"=
+    S:"ttftcuts.Rocky Steppe Hat Tree 0"=
+    S:"ttftcuts.Rocky Steppe Pertrified Dead Tree"=
+    S:"ttftcuts.Rocky Steppe Swamp Oak 0"=
+    S:"ttftcuts.Rocky Steppe Tall Cherry"=
+    S:"ttftcuts.Rocky Steppe Tall Dark Oak"=
+    S:"ttftcuts.Rocky Steppe Tall Fir"=
+    S:"ttftcuts.Rocky Steppe Tall Jacaranda"=
+    S:"ttftcuts.Rocky Steppe Tall Magic Tree"=
+    S:"ttftcuts.Rocky Steppe Tall Maple"=
+    S:"ttftcuts.Rocky Steppe Tall Oak 0"=
+    S:"ttftcuts.Rocky Steppe Tall Oak Autumn"=
+    S:"ttftcuts.Rocky Steppe Tall Oak Brown"=
+    S:"ttftcuts.Rocky Steppe Yellow Big Birch"=
+    S:"ttftcuts.Shrubland Big Birch 0"=
+    S:"ttftcuts.Shrubland Big Birch 1"=
+    S:"ttftcuts.Shrubland Big Pine 0"=
+    S:"ttftcuts.Shrubland Big Pine 1"=
+    S:"ttftcuts.Shrubland Block Maple"=
+    S:"ttftcuts.Shrubland Block Oak 0"=
+    S:"ttftcuts.Shrubland Block Oak Autumn"=
+    S:"ttftcuts.Shrubland Block Oak Brown"=
+    S:"ttftcuts.Shrubland Block Oak Dark"=
+    S:"ttftcuts.Shrubland Cyprus Oak 0"=
+    S:"ttftcuts.Shrubland Cyprus Willow"=
+    S:"ttftcuts.Shrubland Dark Hat"=
+    S:"ttftcuts.Shrubland Dead Tree 0"=
+    S:"ttftcuts.Shrubland Great Oak 0"=
+    S:"ttftcuts.Shrubland Great Oak Autumn"=
+    S:"ttftcuts.Shrubland Great Oak Brown"=
+    S:"ttftcuts.Shrubland Great Oak Dark"=
+    S:"ttftcuts.Shrubland Hat Sacred Tree"=
+    S:"ttftcuts.Shrubland Hat Tree 0"=
+    S:"ttftcuts.Shrubland Pertrified Dead Tree"=
+    S:"ttftcuts.Shrubland Swamp Oak 0"=
+    S:"ttftcuts.Shrubland Tall Cherry"=
+    S:"ttftcuts.Shrubland Tall Dark Oak"=
+    S:"ttftcuts.Shrubland Tall Fir"=
+    S:"ttftcuts.Shrubland Tall Jacaranda"=
+    S:"ttftcuts.Shrubland Tall Magic Tree"=
+    S:"ttftcuts.Shrubland Tall Maple"=
+    S:"ttftcuts.Shrubland Tall Oak 0"=
+    S:"ttftcuts.Shrubland Tall Oak Autumn"=
+    S:"ttftcuts.Shrubland Tall Oak Brown"=
+    S:"ttftcuts.Shrubland Yellow Big Birch"=
+    S:"ttftcuts.Snowy Gravel Beach Big Birch 0"=
+    S:"ttftcuts.Snowy Gravel Beach Big Birch 1"=
+    S:"ttftcuts.Snowy Gravel Beach Big Pine 0"=
+    S:"ttftcuts.Snowy Gravel Beach Big Pine 1"=
+    S:"ttftcuts.Snowy Gravel Beach Block Maple"=
+    S:"ttftcuts.Snowy Gravel Beach Block Oak 0"=
+    S:"ttftcuts.Snowy Gravel Beach Block Oak Autumn"=
+    S:"ttftcuts.Snowy Gravel Beach Block Oak Brown"=
+    S:"ttftcuts.Snowy Gravel Beach Block Oak Dark"=
+    S:"ttftcuts.Snowy Gravel Beach Cyprus Oak 0"=
+    S:"ttftcuts.Snowy Gravel Beach Cyprus Willow"=
+    S:"ttftcuts.Snowy Gravel Beach Dark Hat"=
+    S:"ttftcuts.Snowy Gravel Beach Dead Tree 0"=
+    S:"ttftcuts.Snowy Gravel Beach Great Oak 0"=
+    S:"ttftcuts.Snowy Gravel Beach Great Oak Autumn"=
+    S:"ttftcuts.Snowy Gravel Beach Great Oak Brown"=
+    S:"ttftcuts.Snowy Gravel Beach Great Oak Dark"=
+    S:"ttftcuts.Snowy Gravel Beach Hat Sacred Tree"=
+    S:"ttftcuts.Snowy Gravel Beach Hat Tree 0"=
+    S:"ttftcuts.Snowy Gravel Beach Pertrified Dead Tree"=
+    S:"ttftcuts.Snowy Gravel Beach Swamp Oak 0"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Cherry"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Dark Oak"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Fir"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Jacaranda"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Magic Tree"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Maple"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Oak 0"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Oak Autumn"=
+    S:"ttftcuts.Snowy Gravel Beach Tall Oak Brown"=
+    S:"ttftcuts.Snowy Gravel Beach Yellow Big Birch"=
+    S:"ttftcuts.Tropical Shrubland Big Birch 0"=
+    S:"ttftcuts.Tropical Shrubland Big Birch 1"=
+    S:"ttftcuts.Tropical Shrubland Big Pine 0"=
+    S:"ttftcuts.Tropical Shrubland Big Pine 1"=
+    S:"ttftcuts.Tropical Shrubland Block Maple"=
+    S:"ttftcuts.Tropical Shrubland Block Oak 0"=
+    S:"ttftcuts.Tropical Shrubland Block Oak Autumn"=
+    S:"ttftcuts.Tropical Shrubland Block Oak Brown"=
+    S:"ttftcuts.Tropical Shrubland Block Oak Dark"=
+    S:"ttftcuts.Tropical Shrubland Cyprus Oak 0"=
+    S:"ttftcuts.Tropical Shrubland Cyprus Willow"=
+    S:"ttftcuts.Tropical Shrubland Dark Hat"=
+    S:"ttftcuts.Tropical Shrubland Dead Tree 0"=
+    S:"ttftcuts.Tropical Shrubland Great Oak 0"=
+    S:"ttftcuts.Tropical Shrubland Great Oak Autumn"=
+    S:"ttftcuts.Tropical Shrubland Great Oak Brown"=
+    S:"ttftcuts.Tropical Shrubland Great Oak Dark"=
+    S:"ttftcuts.Tropical Shrubland Hat Sacred Tree"=
+    S:"ttftcuts.Tropical Shrubland Hat Tree 0"=
+    S:"ttftcuts.Tropical Shrubland Pertrified Dead Tree"=
+    S:"ttftcuts.Tropical Shrubland Swamp Oak 0"=
+    S:"ttftcuts.Tropical Shrubland Tall Cherry"=
+    S:"ttftcuts.Tropical Shrubland Tall Dark Oak"=
+    S:"ttftcuts.Tropical Shrubland Tall Fir"=
+    S:"ttftcuts.Tropical Shrubland Tall Jacaranda"=
+    S:"ttftcuts.Tropical Shrubland Tall Magic Tree"=
+    S:"ttftcuts.Tropical Shrubland Tall Maple"=
+    S:"ttftcuts.Tropical Shrubland Tall Oak 0"=
+    S:"ttftcuts.Tropical Shrubland Tall Oak Autumn"=
+    S:"ttftcuts.Tropical Shrubland Tall Oak Brown"=
+    S:"ttftcuts.Tropical Shrubland Yellow Big Birch"=
     S:"ttftcuts.Tundra Big Birch 0"=
     S:"ttftcuts.Tundra Big Birch 1"=
     S:"ttftcuts.Tundra Big Pine 0"=
@@ -8411,6 +8566,68 @@
     S:"ttftcuts.Tundra Tall Oak Autumn"=
     S:"ttftcuts.Tundra Tall Oak Brown"=
     S:"ttftcuts.Tundra Yellow Big Birch"=
+    S:"ttftcuts.Volcano Big Birch 0"=
+    S:"ttftcuts.Volcano Big Birch 1"=
+    S:"ttftcuts.Volcano Big Pine 0"=
+    S:"ttftcuts.Volcano Big Pine 1"=
+    S:"ttftcuts.Volcano Block Maple"=
+    S:"ttftcuts.Volcano Block Oak 0"=
+    S:"ttftcuts.Volcano Block Oak Autumn"=
+    S:"ttftcuts.Volcano Block Oak Brown"=
+    S:"ttftcuts.Volcano Block Oak Dark"=
+    S:"ttftcuts.Volcano Cyprus Oak 0"=
+    S:"ttftcuts.Volcano Cyprus Willow"=
+    S:"ttftcuts.Volcano Dark Hat"=
+    S:"ttftcuts.Volcano Dead Tree 0"=
+    S:"ttftcuts.Volcano Great Oak 0"=
+    S:"ttftcuts.Volcano Great Oak Autumn"=
+    S:"ttftcuts.Volcano Great Oak Brown"=
+    S:"ttftcuts.Volcano Great Oak Dark"=
+    S:"ttftcuts.Volcano Hat Sacred Tree"=
+    S:"ttftcuts.Volcano Hat Tree 0"=
+    S:"ttftcuts.Volcano Pertrified Dead Tree"=
+    S:"ttftcuts.Volcano Swamp Oak 0"=
+    S:"ttftcuts.Volcano Tall Cherry"=
+    S:"ttftcuts.Volcano Tall Dark Oak"=
+    S:"ttftcuts.Volcano Tall Fir"=
+    S:"ttftcuts.Volcano Tall Jacaranda"=
+    S:"ttftcuts.Volcano Tall Magic Tree"=
+    S:"ttftcuts.Volcano Tall Maple"=
+    S:"ttftcuts.Volcano Tall Oak 0"=
+    S:"ttftcuts.Volcano Tall Oak Autumn"=
+    S:"ttftcuts.Volcano Tall Oak Brown"=
+    S:"ttftcuts.Volcano Yellow Big Birch"=
+    S:"ttftcuts.Woodland Big Birch 0"=
+    S:"ttftcuts.Woodland Big Birch 1"=
+    S:"ttftcuts.Woodland Big Pine 0"=
+    S:"ttftcuts.Woodland Big Pine 1"=
+    S:"ttftcuts.Woodland Block Maple"=
+    S:"ttftcuts.Woodland Block Oak 0"=
+    S:"ttftcuts.Woodland Block Oak Autumn"=
+    S:"ttftcuts.Woodland Block Oak Brown"=
+    S:"ttftcuts.Woodland Block Oak Dark"=
+    S:"ttftcuts.Woodland Cyprus Oak 0"=
+    S:"ttftcuts.Woodland Cyprus Willow"=
+    S:"ttftcuts.Woodland Dark Hat"=
+    S:"ttftcuts.Woodland Dead Tree 0"=
+    S:"ttftcuts.Woodland Great Oak 0"=
+    S:"ttftcuts.Woodland Great Oak Autumn"=
+    S:"ttftcuts.Woodland Great Oak Brown"=
+    S:"ttftcuts.Woodland Great Oak Dark"=
+    S:"ttftcuts.Woodland Hat Sacred Tree"=
+    S:"ttftcuts.Woodland Hat Tree 0"=
+    S:"ttftcuts.Woodland Pertrified Dead Tree"=
+    S:"ttftcuts.Woodland Swamp Oak 0"=
+    S:"ttftcuts.Woodland Tall Cherry"=
+    S:"ttftcuts.Woodland Tall Dark Oak"=
+    S:"ttftcuts.Woodland Tall Fir"=
+    S:"ttftcuts.Woodland Tall Jacaranda"=
+    S:"ttftcuts.Woodland Tall Magic Tree"=
+    S:"ttftcuts.Woodland Tall Maple"=
+    S:"ttftcuts.Woodland Tall Oak 0"=
+    S:"ttftcuts.Woodland Tall Oak Autumn"=
+    S:"ttftcuts.Woodland Tall Oak Brown"=
+    S:"ttftcuts.Woodland Yellow Big Birch"=
     S:"twilightforest.Dark Forest Big Birch 0"=
     S:"twilightforest.Dark Forest Big Birch 1"=
     S:"twilightforest.Dark Forest Big Pine 0"=
