--- a/config/railcraft/items.cfg
+++ b/config/railcraft/items.cfg
@@ -11,10 +11,10 @@
 items {
     B:armor.goggles=true
     B:armor.overalls=true
-    B:armor.steel.boots=true
-    B:armor.steel.helmet=true
-    B:armor.steel.legs=true
-    B:armor.steel.plate=true
+    B:armor.steel.boots=false
+    B:armor.steel.helmet=false
+    B:armor.steel.legs=false
+    B:armor.steel.plate=false
     B:backpack.apothecary.t1=true
     B:backpack.apothecary.t2=true
     B:backpack.iceman.t1=true
@@ -79,12 +79,12 @@ items {
     B:tool.electric.meter=true
     B:tool.magnifying.glass=true
     B:tool.signal.tuner=true
-    B:tool.steel.axe=true
-    B:tool.steel.hoe=true
-    B:tool.steel.pickaxe=true
-    B:tool.steel.shears=true
-    B:tool.steel.shovel=true
-    B:tool.steel.sword=true
+    B:tool.steel.axe=false
+    B:tool.steel.hoe=false
+    B:tool.steel.pickaxe=false
+    B:tool.steel.shears=false
+    B:tool.steel.shovel=false
+    B:tool.steel.sword=false
     B:tool.surveyor=true
     B:tool.whistle.tuner=true
 }
