--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -58,6 +58,9 @@ general {
         0
      >
 
+    # If this is enabled, GC oil will be added to existing Overworld maps where possible.
+    B:"Retro Gen of GC Oil in existing map chunks"=false
+
     # If this is enabled, copper ore will generate on the overworld.
     B:"Enable Copper Ore Gen"=false
 
@@ -141,11 +144,26 @@ general {
     # Set this to true for increased difficulty in modpacks (see forum for more info).
     B:"Harder Difficulty"=false
 
+    # Set this to true for less metal use in Galacticraft recipes (makes the game easier).
+    B:"Quick Game Mode"=false
+
     # If this is enabled, areas sealed by Oxygen Sealers will run a seal check when the player breaks or places a block (or on block updates).  This should be enabled for a 100% accurate sealed status, but can be disabled on servers for performance reasons.
     B:"Enable Sealed edge checks"=true
 
     # Enable this if the standard canister recipe causes a conflict.
     B:"Alternate recipe for canisters"=false
+
+    # This needs to match the OreDictionary name used in the other mod. Set a nonsense name to disable.
+    S:"OreDict name of other mod's silicon usable in Galacticraft"=itemSilicon
+
+    # Leave 'KEY_' value, adding the intended keyboard character to replace the letter. Values 0-9 and A-Z are accepted
+    S:"Default key for opening in-game galaxy map - Useful for modpacks"=KEY_M
+
+    # Leave 'KEY_' value, adding the intended keyboard character to replace the letter. Values 0-9 and A-Z are accepted
+    S:"Default key for opening fuel levels gui - Useful for modpacks"=KEY_F
+
+    # Leave 'KEY_' value, adding the intended keyboard character to replace the letter. Values 0-9 and A-Z are accepted
+    S:"Default key to toggle advanced goggles behaviour - Useful for modpacks"=KEY_K
 
     # The normal factor is 1.  Increase this to 2 - 5 if other mods with a lot of oil (e.g. BuildCraft) are installed to increase GC rocket fuel requirement.
     I:"Rocket fuel factor"=1
